--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
 
 <head>
-<!-- Include Bootstrap for styling -->
-<link rel="stylesheet" href=
-"https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
+	<!-- Include Bootstrap for styling -->
+	<link rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
 
-<style>
-	.qr-code {
-	/*max-width: 200px;*/
-	width:100px;
-	margin: 10px;
-	}
-</style>
+	<style>
+		.qr-code {
+			/*max-width: 200px;*/
+			width: 100px;
+			margin: 10px;
+		}
+	</style>
 
-<title>QR Code Generator</title>
+	<title>QR Code Generator</title>
 </head>
 
 <body>
@@ -22,82 +22,131 @@
 		.container-fluid {
 			max-width: 450px;
 			max-height: 800px;
-	
+
+		}
+
+		#history-list {
+			border: 2px solid black;
+			border-radius: 7px;
+			margin-left: 35%;
+			margin-right: 35%;
+			padding: 20px;
+		}
+
+		#history-list h1 {
+			font-size: 2em;
+			margin-top: 0px;
+		}
+
+		#toptitle {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+
+		#toptitle h1 {
+			font-size: 2.5em;
 		}
 	</style>
-<div class="container-fluid">
-	<div class="text-center">
 
-	<!-- Get a Placeholder image initially,
+	<div id="toptitle">
+		<h1>Business QR Code Generator</h1>
+	</div>
+
+	<div class="container-fluid">
+		<div class="text-center">
+
+			<!-- Get a Placeholder image initially,
 	this will change according to the
 	data entered later -->
-	<img src=
-"https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
-		class="qr-code img-thumbnail img-responsive" />
-	</div>
+			<img src="https://chart.googleapis.com/chart?cht=qr&chl=Hello+World&chs=160x160&chld=L|0"
+				class="qr-code img-thumbnail img-responsive" />
+		</div>
 
-	<div class="form-horizontal">
-	<div class="form-group">
-		<label class="control-label col-sm-2"
-		for="content">
-		Content:
-		</label>
-		<div class="col-sm-10">
+		<div class="form-horizontal">
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="content">
+					Content:
+				</label>
+				<div class="col-sm-10">
 
-		<!-- Input box to enter the
+					<!-- Input box to enter the
 			required data -->
-		<input type="text" size="60"
-			maxlength="60" class="form-control"
-			id="content" placeholder="Enter content" />
-		</div>
-	</div>
-	<div class="form-group">
-		<div class="col-sm-offset-2 col-sm-10">
+					<input type="text" size="60" maxlength="60" class="form-control" id="content"
+						placeholder="Enter content" />
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-offset-2 col-sm-10">
 
-		<!-- Button to generate QR Code for
+					<!-- Button to generate QR Code for
 		the entered data -->
-		<button type="button" class=
-			"btn btn-default" id="generate">
-			Generate
-		</button>
+					<button type="button" class="btn btn-default" id="generate">
+						Generate
+					</button>
+				</div>
+			</div>
 		</div>
 	</div>
+	<div id="history-list">
+		<h1>History:</h1>
+		<p id="thelist"></p>
 	</div>
-</div>
-<script src=
-	"https://code.jquery.com/jquery-3.5.1.js">
-</script>
+	<script src="https://code.jquery.com/jquery-3.5.1.js">
+	</script>
 
-<script>
-	// Function to HTML encode the text
-	// This creates a new hidden element,
-	// inserts the given text into it
-	// and outputs it out as HTML
-	function htmlEncode(value) {
-	return $('<div/>').text(value)
-		.html();
-	}
+	<script>
+		// Function to HTML encode the text
+		// This creates a new hidden element,
+		// inserts the given text into it
+		// and outputs it out as HTML
+		function htmlEncode(value) {
+			return $('<div/>').text(value)
+				.html();
+		}
 
-	$(function () {
 
-	// Specify an onclick function
-	// for the generate button
-	$('#generate').click(function () {
 
-		// Generate the link that would be
-		// used to generate the QR Code
-		// with the given data
-		let finalURL =
-'https://chart.googleapis.com/chart?cht=qr&chl=' +
-		htmlEncode($('#content').val()) +
-		'&chs=160x160&chld=L|0'
+		$(function () {
 
-		// Replace the src of the image with
-		// the QR code image
-		$('.qr-code').attr('src', finalURL);
-	});
-	});
-</script>
+			var history = new Array();
+			var i = 0;
+			// Specify an onclick function
+			// for the generate button
+			$('#generate').click(function () {
+
+				// Generate the link that would be
+				// used to generate the QR Code
+				// with the given data
+				let finalURL =
+					'https://chart.googleapis.com/chart?cht=qr&chl=' +
+					htmlEncode($('#content').val()) +
+					'&chs=160x160&chld=L|0'
+
+				// Replace the src of the image with
+				// the QR code image
+				$('.qr-code').attr('src', finalURL);
+
+
+				if (history[i - 1] != htmlEncode($('#content').val())) {
+					history.push(htmlEncode($('#content').val()));
+					i += 1;
+				}
+				if (history.length === 5) {
+					history.shift();
+				}
+
+				console.log(history);
+
+				for (x in history) {
+					(history[x]);
+				}
+
+				document.getElementById("thelist").innerHTML = history;
+
+			});
+		});
+	</script>
 </body>
 
 </html>
